# ChangeLog for mail-client/claws-mail-bsfilter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-bsfilter/ChangeLog,v 1.2 2009/10/18 23:05:22 fauli Exp $

*claws-mail-bsfilter-1.0.2 (18 Oct 2009)

  18 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-bsfilter-1.0.2.ebuild:
  version bump, bug 289070

*claws-mail-bsfilter-1.0.1 (08 Jul 2009)

  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-bsfilter-1.0.1.ebuild, +metadata.xml:
  intial commit for bug 276760
