@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-python/claws-mail-python-0.2.ebuild,v 1.1 2009/10/18 23:47:58 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-python/claws-mail-python-0.2.ebuild,v 1.2 2009/12/01 09:56:58 maekke Exp $
 
 MY_P="${PN#claws-mail-}_plugin-${PV}"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.claws-mail.org/"
 SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 RDEPEND=">=mail-client/claws-mail-3.7.3
 	>=dev-lang/python-2.5"
