@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-fancy
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-fancy/ChangeLog,v 1.5 2009/10/18 23:24:13 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-fancy/ChangeLog,v 1.6 2009/12/01 09:57:31 maekke Exp $
+
+  01 Dec 2009; Markus Meier <maekke@gentoo.org>
+  claws-mail-fancy-0.9.8.ebuild:
+  add ~amd64, bug #276760
 
 *claws-mail-fancy-0.9.8 (18 Oct 2009)
 
