@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-bsfilter
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-bsfilter/ChangeLog,v 1.2 2009/10/18 23:05:22 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-bsfilter/ChangeLog,v 1.3 2009/12/01 09:56:23 maekke Exp $
+
+  01 Dec 2009; Markus Meier <maekke@gentoo.org>
+  claws-mail-bsfilter-1.0.2.ebuild:
+  add ~amd64, bug #276760
 
 *claws-mail-bsfilter-1.0.2 (18 Oct 2009)
 
